--- a/ui/src/components/App/App.css
+++ b/ui/src/components/App/App.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Nunito:ital,wght@0,300;0,400;1,200;1,300&display=swap');
+
 html,
 body {
   margin: 0;
+  font-family: 'Nunito', sans-serif;
+  font-family: 'Noto Sans', sans-serif;
 }
