--- a/ui/src/components/StoreProducts/StoreProducts.css
+++ b/ui/src/components/StoreProducts/StoreProducts.css
@@ -1,6 +1,7 @@
 .StoreProducts {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .StoreProducts a {
@@ -8,13 +9,18 @@
 }
 .product-info {
   width: 300px;
-  height: auto;
+  height: 400px;
+  border: 2px solid #007a79;
+  border-radius: 10px;
+  overflow: hidden;
 }
 .product-image {
-  overflow: hidden;
+  width: 100%;
+  height: 70%;
 }
 .product-image img {
   width: 100%;
+  height: 100%;
 }
 .product-category {
   font-size: 18px;
