--- a/ui/src/components/Home/Home.css
+++ b/ui/src/components/Home/Home.css
@@ -5,7 +5,12 @@
   padding: 50px 80px;
 }
 li {
-  
+  list-style: none;
+  margin: 18px;
+}
+li span {
+  font-size: 20px;
+  font-weight: 500px;
 }
 
 .shop-intro {
