--- a/ui/src/components/ProductDetail/ProductDetail.css
+++ b/ui/src/components/ProductDetail/ProductDetail.css
@@ -7,12 +7,13 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin: 50px;
-  height: 500px;
+  margin: 50px 120px;
+  height: 450px;
+  width: auto;
 }
 .productdetail-image {
   width: 100%;
-  height: 100%;
+  max-height: 450px;
   border-radius: 10px;
   overflow: hidden;
   margin: 10px;
