--- a/ui/src/components/Sidebar/Sidebar.css
+++ b/ui/src/components/Sidebar/Sidebar.css
@@ -15,7 +15,8 @@
 }
 .sidebar-btn {
   font-size: 20px;
-  font-weight: 800px;
+  font-weight: 1000px;
   background: transparent;
   border: none;
+  color: #fff;
 }
