--- a/ui/src/components/ProductDetail/ProductDetail.css
+++ b/ui/src/components/ProductDetail/ProductDetail.css
@@ -12,14 +12,17 @@
   width: auto;
 }
 .productdetail-image {
-  width: 100%;
   max-height: 450px;
   border-radius: 10px;
   overflow: hidden;
   margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .productdetail-image img {
-  width: 100%;
+  width: 1000px;
+  max-width: 100%;
   height: 100%;
 }
 
@@ -40,7 +43,7 @@
 
 }
 .productdetail-price {
-
+  font-size: 18px;
 }
 .productdetail-desc {
   font-size: 20px;
