--- a/ui/src/components/StoreProducts/StoreProducts.css
+++ b/ui/src/components/StoreProducts/StoreProducts.css
@@ -11,6 +11,8 @@
   width: 300px;
   height: 400px;
   border: 2px solid #007a79;
+  background: rgba(0, 122, 121, 0.5);
+  color: #fff;
   border-radius: 10px;
   overflow: hidden;
   margin: 10px;
@@ -24,7 +26,7 @@
   height: 100%;
 }
 .product-category {
-  font-size: 18px;
+  font-size: 15px;
   text-transform: uppercase;
   background-color: #546747;
   float: right;
