--- a/ui/src/components/Sidebar/Sidebar.css
+++ b/ui/src/components/Sidebar/Sidebar.css
@@ -7,6 +7,7 @@
   padding: 10px;
 }
 .sidebar-title {
+  margin: 20px;
   font-size: 30px;
 }
 table {
@@ -26,7 +27,7 @@ tr {
   width: 50px;
 }
 .sidebar-btn {
-  font-size: 20px;
+  font-size: 40px;
   font-weight: 1000px;
   background: transparent;
   border: none;
