--- a/ui/src/components/StoreProducts/StoreProducts.css
+++ b/ui/src/components/StoreProducts/StoreProducts.css
@@ -6,6 +6,7 @@
 
 .StoreProducts a {
   text-decoration: none;
+  margin: 10px;
 }
 .product-info {
   width: 300px;
@@ -15,7 +16,9 @@
   color: #fff;
   border-radius: 10px;
   overflow: hidden;
-  margin: 10px;
+}
+.product-hover:hover {
+  transform: translateY(-10px);
 }
 .product-image {
   width: 100%;
