--- a/ui/src/components/Sidebar/Sidebar.css
+++ b/ui/src/components/Sidebar/Sidebar.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   height: 100%;
-  background: #583d34;
+  background: #955f31;
   padding: 10px;
 }
 .sidebar-title {
@@ -17,7 +17,10 @@ table {
   padding: 10px;
 }
 tr {
-  background: #517f83;
+  background: rgba(81, 127, 131, 0.8);
+}
+th {
+  padding: 3px 10px;
 }
 
 .open {
