add total cost to cart

--- a/ui/src/components/Sidebar/Sidebar.css
+++ b/ui/src/components/Sidebar/Sidebar.css
@@ -24,7 +24,7 @@ th {
 }
 
 .open {
-  width: 300px;
+  width: 400px;
 }
 .close {
   display: none;
@@ -36,4 +36,8 @@ th {
   background: transparent;
   border: none;
   color: #fff;
+}
+
+.hidden {
+  display: none;
 }
